[Misc] Mimick all the jobs we had when not using pipelines